Fix Bibtex entry

--- a/assets/bibliography/3d-printing-file-format-usage.bib
+++ b/assets/bibliography/3d-printing-file-format-usage.bib
@@ -155,8 +155,8 @@
              Product Data Representation and Exchange – Part 1: Overview and
              Fundamental Principles},
     author = {
-              Technical&#160;Committee:&#160;ISO/TC&#160;184/SC&#160;4&#160;Industrial
-              data},
+              Technical&#160;Committee:&#160;ISO/TC&#160;184/SC&#160;4&#160;Industrial&#160;data
+              },
     year = {2021},
     month = mar,
     url = {https://www.iso.org/standard/72237.html},
