swapped subsections and fixed some formatting

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -34,6 +34,7 @@ toc:
         - name: Research Gap
     - name: Contributions
       subsections:
+      - name: Censorship
       - name: Server Support
         subsections:
           - name: Unencrypted HTTP/1.1 Support
@@ -41,7 +42,6 @@ toc:
           - name: Unencrypted HTTP/2 with Upgrade Mechanism Support
           - name: Tranco Relation
           - name: Tool for Detecting HTTP Support
-      - name: Censorship
     - name: Discussion
       subsections:
         - name: What makes unencrypted HTTP/2 special?
@@ -56,7 +56,7 @@ toc:
 Censors around the world have long censored unencrypted HTTP traffic.
 In this blog post, we show that a specific HTTP version---unencrypted HTTP/2--- is unaffected by censorship in China and Iran.
 We access otherwise censored websites in both countries over unencrypted HTTP/2.
-Despite no web browser implementing unencrypted HTTP/2, we detect that between 13\% and 26\% of websites that support unencrypted HTTP/2 traffic.
+Despite no web browser implementing unencrypted HTTP/2, we detect that between 13% and 26% of websites that support unencrypted HTTP/2 traffic.
 To aid the community and ease future research, we provide a tool that evaluates the unencrypted HTTP support of a website.
 Finally, we discuss the limitations and potential of unencrypted HTTP/2 for censorship circumvention.
 We consider our finding an interesting addition to current censorship circumvention techniques.
@@ -130,8 +130,17 @@ In the following, we give an updated look on HTTP censorship in China and Iran.
 
 ## Contributions
 
-In the following, we first detail the findings of our HTTP version server support scan.
-Then, we present the results of our censorship analysis for both countries.
+In the following, we first present the results of our HTTP censorship analysis for both countries.
+Then, we detail the findings of our HTTP version server support scan.
+
+### Censorship
+In China, HTTP/1.1 is censored with a combination of different TCP RST packets with the ACK flag set or not, depending on the specific domain.
+In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
+However, our key observation in our censorship scans is that HTTP/2 is not censored at all in both countries.
+
+As a censorship circumvention example, we tried to access \url{http://nsfwyoutube.com} in both countries. 
+This website is censored in both countries via HTTP/1.1.
+We were able to access this website in both countries successfully by using HTTP/2 with prior knowledge.
 
 ### Server Support
 For the HTTP version server support scan, we used three lists of domains: Tranco top one million, the CitizenLab test list for China, and the CitizenLab test list for Iran.
@@ -271,16 +280,6 @@ HTTP/2 (Upgrade): FAILURE
 This indicates that `lgbtchinatour.com` supports unencrypted HTTP/1.0 after a redirect and unencrypted HTTP/1.1 but no unencrypted HTTP/2.
 We refer to the [GitHub project](https://github.com/UPB-SysSec/Raw-HTTP-Support-Analyzer) for a detailed overview of the tool's functionality.
 We hope that our tool aids the community and fellow researchers in their evaluation of HTTP censorship and its circumvention.
-
-### Censorship
-<!-- I would put this first in Contributions with actual example of how we can access a blocked site with unencrypted HTTP/2-->
-In China, HTTP/1.1 is censored with a combination of different TCP RST packets with the ACK flag set or not, depending on the specific domain.
-In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
-However, our key observation in our censorship scans is that HTTP/2 is not censored at all in both countries.
-
-As a censorship circumvention example, we tried to access \url{http://nsfwyoutube.com} in both countries. 
-This website is censored in both countries via HTTP/1.1.
-We were able to access this website in both countries successfully by using HTTP/2 with prior knowledge.
 
 ## Discussion
 
