--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -221,7 +221,7 @@ User-Agent: Mozilla/5.0 (...) Gecko/20100101 Firefox/127.0
 Connection: close
 ```
 
-Across the three used lists, the HTTP/1.1 support varies between 18.62\% and 21.52\%.
+Across the three used lists, the HTTP/1.1 support varies between 18.62% and 21.52%.
 These results show that - surprisingly - unencrypted HTTP/1.1 is still supported by many domains.
 
 #### Unencrypted HTTP/2 with Prior Knowledge Support
@@ -232,7 +232,7 @@ Host: <domain_name>
 User-Agent: Mozilla/5.0 (...) Gecko/20100101 Firefox/127.0
 ```
 
-The HTTP/2 with prior knowledge support varies between 2.5\% and 6.28\%, depending on the domain list. 
+The HTTP/2 with prior knowledge support varies between 2.5% and 6.28%, depending on the domain list. 
 This shows that while the support of HTTP/2 is lower than the one of HTTP/1.1 for all lists, it is still being used by some websites.
 
 #### Unencrypted HTTP/2 with Upgrade Mechanism Support
@@ -246,7 +246,7 @@ Upgrade: h2c
 HTTP2-Settings: AAEAABAAAAIAAAABAAQAAP__AAUAAEAAAAgAAAA...
 ```
 
-The upgrade mechanism has the lowest support ranging from 0.6\% to 1.74\%, depending on the used domain list. 
+The upgrade mechanism has the lowest support ranging from 0.6% to 1.74%, depending on the used domain list. 
 This makes sense as RFC 9113&nbsp;<d-cite key="RFC9113"/> deprecated this method due to its low adoption rate.
 
 #### Tranco Relation
@@ -255,8 +255,8 @@ This makes sense as RFC 9113&nbsp;<d-cite key="RFC9113"/> deprecated this method
 Unencrypted HTTP support by servers from the Tranco Top 1 Million list. Unencrypted HTTP/2 support increases for less accessed websites, contrasting unencrypted HTTP/1.
 </div>
 
-Unencrypted HTTP/1.1 support mostly between 10 and 35\%.
-Unencrypted HTTP/2 support up to 5\% for lower Tranco ranks. 
+Unencrypted HTTP/1.1 support mostly between 10 and 35%.
+Unencrypted HTTP/2 support up to 5% for lower Tranco ranks. 
 Interestingly, unencrypted HTTP/2 support increases for lower Tranco ranks while unencrypted HTTP/1 support increases until about 400,000 and then decreases again. 
 This aligns with support by websites from Citizenlab list which are usually smaller than Tranco websites.
 While overall support for HTTP/2 is low, we argue that it can still be used to access certain blocked websites successfully and adds to the arsenal of censorship circumvention techniques.
@@ -283,8 +283,8 @@ We hope that our tool aids the community and fellow researchers in their evaluat
 
 ## Discussion
 
-We have successfully circumvented the HTTP censors in China and Iran and showed that up to 5\% of censored websites are accessible via unencrypted HTTP/2.
-This still leaves 95\% of censored websites inaccessible with unencrypted HTTP/2 as a circumvention method.
+We have successfully circumvented the HTTP censors in China and Iran and showed that up to 5% of censored websites are accessible via unencrypted HTTP/2.
+This still leaves 95% of censored websites inaccessible with unencrypted HTTP/2 as a circumvention method.
 Despite this, we consider unencrypted HTTP/2 a valuable addition to current censorship circumvention techniques in the cat-and-mouse game between censors and affected people.
 Below, we discuss the limitations and potential of unencrypted HTTP/2 as a circumvention technique.
 
