improved block post

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: "HTTP/2 Circumvention"
+title: "HTTP/2 Censorship Circumvention Blog"
 date: 2024-10-31
 description: "Exploring HTTP/2 as a censorship circumvention possibility"
 citation: true
@@ -53,10 +53,10 @@ toc:
 *Authors in alphabetical order - all contributed equally
 
 ## Abstract
-Censors around the world have long censored unencrypted HTTP traffic.
-In this blog post, we show that a specific HTTP version---unencrypted HTTP/2--- is unaffected by censorship in China and Iran.
+Censors worldwide have long censored unencrypted HTTP traffic.
+In this blog post, we show that a specific HTTP version---unencrypted HTTP/2---is unaffected by censorship in China and Iran.
 We access otherwise censored websites in both countries over unencrypted HTTP/2.
-Despite no web browser implementing unencrypted HTTP/2, we detect that between 13% and 26% of websites that support unencrypted HTTP/2 traffic.
+Despite no web browser implementing unencrypted HTTP/2, we detect that up to 6.28% of websites support unencrypted HTTP/2 traffic.
 To aid the community and ease future research, we provide a tool that evaluates the unencrypted HTTP support of a website.
 Finally, we discuss the limitations and potential of unencrypted HTTP/2 for censorship circumvention.
 We consider our finding an interesting addition to current censorship circumvention techniques.
@@ -96,7 +96,7 @@ As the initial step, the client establishes a TCP connection with the server.
 Then, the client sends the so-called connection preface, followed by a **SETTINGS** frame.
 This connection preface was specified to trigger an error on HTTP servers that do not support HTTP/2.
 The **SETTINGS** frame contains additional configuration parameters for the connection.
-If the server supports HTTP/2, it can process the preface and responds with its own connection preface, containing a **SETTINGS** frame.
+If the server supports HTTP/2, it can process the preface and respond with its own connection preface, containing a **SETTINGS** frame.
 
 #### Upgrade Mechanism
 <!-- Upgrade -->
@@ -138,12 +138,12 @@ In China, HTTP/1.1 is censored with a combination of different TCP RST packets w
 In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
 However, our key observation in our censorship scans is that HTTP/2 is not censored at all in both countries.
 
-As a censorship circumvention example, we tried to access \url{http://nsfwyoutube.com} in both countries. 
+As a censorship circumvention example, we tried to access http://nsfwyoutube.com in both countries. 
 This website is censored in both countries via HTTP/1.1.
 We were able to access this website in both countries successfully by using HTTP/2 with prior knowledge.
 
 ### Server Support
-For the HTTP version server support scan, we used three lists of domains: Tranco top one million, the CitizenLab test list for China, and the CitizenLab test list for Iran.
+For the HTTP version server support scan, we used three lists of domains: [Tranco top one million](https://tranco-list.eu/list/KJWPW), the CitizenLab [test list for China](https://github.com/citizenlab/test-lists/commit/80087aa), and the CitizenLab [test list for Iran](https://github.com/citizenlab/test-lists/commit/e9e3bfb).
 The following table shows the number of analyzed domains for each scan in each list:
 
 <table style="margin: 0 auto; text-align:center">
@@ -318,6 +318,6 @@ Overall, we consider the practical deployment of HTTP/2 as a censorship circumve
 ## Conclusion
 In summary, we introduced unencrypted HTTP/2 as a censorship circumvention method by accessing blocked resources in China and Iran.
 While server support for unencrypted HTTP/2 is low, we showed that a non-negligible number of censored websites supports it.
-To aid future evaluations of servers' support for unencrypted HTTP/2, we developed a tool and made it accessible on GitHub.
+To aid future evaluations of servers' support for unencrypted HTTP/2, we developed a tool and made it accessible on  [GitHub](https://github.com/UPB-SysSec/Raw-HTTP-Support-Analyzer).
 Feel free to use it or contact us for further discussion and future work.
 We hope that our contributions aid affected people and the censorship circumvention community.
