--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -1,8 +1,8 @@
 ---
 layout: distill
-title: "HTTP/2 Censorship Circumvention Blog"
+title: "Censors Ignore Unencrypted HTTP/2 Traffic"
 date: 2024-10-31
-description: "Exploring HTTP/2 as a censorship circumvention possibility"
+description: "Using Unencrypted HTTP/2 to Circumvent Censorship"
 citation: true
 
 authors:
@@ -32,7 +32,7 @@ toc:
             - name: Prior Knowledge
             - name: Upgrade Mechanism
         - name: Research Gap
-    - name: Contributions
+    - name: Results
       subsections:
       - name: Censorship
       - name: Server Support
@@ -70,38 +70,42 @@ In this section, we provide background information on HTTP and its censorship. W
 
 
 <!-- Censorship of unencrypted HTTP -->
-HTTP is one of the main protocols used throughout the Internet for accessing websites.
+HTTP can be considered _the_ protocol for accessing websites on the Internet.
 While HTTP is usually used in conjunction with TLS, censorship of the plain HTTP protocol is still present and prior research analyzed the most common version HTTP/1.1&nbsp;<d-cite key="RFC9112"/> extensively&nbsp;<d-cite key="harrity_GETOutAutomated_2022,jin_UnderstandingPracticesGlobal_2021,bock_DetectingEvadingCensorshipinDepth_2020"/>.
-These works discovered that censors such as the ones in China and Iran use information in the Host header and path to determine whether an HTTP request should be censored.
-An example HTTP/1.1 GET request with a censored path value and Host header can be seen here:
+These works discovered that censors such as the ones in China and Iran use information in the Host header and request path to determine whether an HTTP request should be censored.
+The examplary HTTP/1.1 GET request below shows that the requested path and domain name can be easily extracted by a censor:
 ```
-GET /<censored_keyword> HTTP/1.1  
+GET /<request path> HTTP/1.1  
 Host: <censored_domain>
 ```
-If a request should be censored, the censor can inject TCP RST packets, inject an HTTP block page, or null-route the whole connection&nbsp;<d-cite key="bock_YourCensorMy_2021"/>.
+To censor a request, censors inject TCP RST packets, HTTP block pages, or null-route the whole connection&nbsp;<d-cite key="bock_YourCensorMy_2021"/>.
 
 ### HTTP/2
 <!--General HTTP/2 and its different because byte based -->
-As outlined above, many works exist that analyze HTTP/1.1 censorship but there is a lack of research for the newer version: HTTP/2&nbsp;<d-cite key="RFC9113"/>.
-HTTP/2 maintains the same semantics as its predecessor, uses the same port numbers, and still uses TCP.
-However, it now consists of binary data directly and is not text-based anymore.
-Arguably, this makes it harder for a censor to parse, analyze, and censor HTTP/2 connections as it requires some initial effort to implement the new parsing mechanisms.
-When a client wants to connect to a server with HTTP/2, there are two main ways of doing so: with prior knowledge or the Upgrade mechanisms.
-In the following, we describe both ways.
+<!-- TODO: include HTTP/2 request to make clear nothing really changed except byte based-->
+As outlined above, HTTP/1.1 censorship has been widely analyzed.
+Nevertheless, there is a lack of research for the newer version: HTTP/2&nbsp;<d-cite key="RFC9113"/>.
+HTTP/2 maintains the same semantics as its predecessor: it uses the same port numbers, runs over TCP, and most importantly it conveys the request path and accessed domain name unencrypted.
+Despite these similarities, HTTP/2 introduced a major change by switching from a text-based format to a binary format.
+While HTTP/2 is still easily censorable due to missing encryption, HTTP/2's binary format complicates censors' efforts as it requires different parsing mechanisms.
+
+To facilitate the upgrade from HTTP/1.1 to HTTP/2, clients can use either of two mechanisms: they can simply connect with HTTP/2 (Prior Knowledge) or upgrade an existing HTTP/1.1 connection (Upgrade Mechanism).
+Below, we describe both mechanisms.
 
 #### Prior Knowledge
 <!--Prior knowledge -->
-During prior knowledge, the client directly attempts to speak HTTP/2 with the server.
+Using prior knowledge, the client directly attempts to speak HTTP/2 with the server.
 As the initial step, the client establishes a TCP connection with the server.
 Then, the client sends the so-called connection preface, followed by a **SETTINGS** frame.
-This connection preface was specified to trigger an error on HTTP servers that do not support HTTP/2.
+This connection preface was specifically defined to trigger errors on HTTP servers without HTTP/2 support.
 The **SETTINGS** frame contains additional configuration parameters for the connection.
 If the server supports HTTP/2, it can process the preface and respond with its own connection preface, containing a **SETTINGS** frame.
+<!-- TODO: is this correct?-->
+After receiving the servers' **SETTINGS** frame, the client sends its HTTP/2 request.
 
 #### Upgrade Mechanism
 <!-- Upgrade -->
-Initially defined by RFC 7540&nbsp;<d-cite key="RFC7540"/>, the Upgrade mechanism has been deprecated since RFC 9113&nbsp;<d-cite key="RFC9113"/> as it was not widely adopted.
-During the Upgrade mechanism, the client establishes a TCP connection with the server and then sends an HTTP/1.1 request, including the Upgrade and HTTP2-Settings headers.
+During the upgrade mechanism, the client establishes a TCP connection with the server and then sends an HTTP/1.1 request, including the Upgrade and HTTP2-Settings headers.
 An example HTTP/1.1 Upgrade request can look like this:
 ```
 GET / HTTP/1.1  
@@ -110,42 +114,53 @@ Connection: Upgrade, HTTP2-Settings
 Upgrade: h2c
 HTTP2-Settings: <base64url encoding of HTTP/2 SETTINGS payload>
 ```
-If the server supports the Upgrade mechanism, it responds with a 101 status code, indicating **Switching Protocols**, and then transitions to an HTTP/2 connection.
+If the server supports the upgrade mechanism, it responds with a 101 status code, indicating **Switching Protocols**, and then transitions to an HTTP/2 connection.
 An example successful server answer can look like this:
 ```
 HTTP/1.1 101 Switching Protocols
 Connection: Upgrade
 Upgrade: h2c
-[ HTTP/2 answer for "GET /" ...
+[ HTTP/2 answer for "GET /" ... ]
 ```
+Initially defined by RFC 7540&nbsp;<d-cite key="RFC7540"/>, the upgrade mechanism has been deprecated since RFC 9113&nbsp;<d-cite key="RFC9113"/> as it was not widely adopted.
+It is also less fit for censorship circumvention than prior knowledge as it involves a HTTP/1.1 request that is caught by HTTP censors that do not support HTTP/2.
 
 ### Research Gap
 <!-- HTTP/2 in general only used encrypted but WHAT IF? -->
-As HTTP/2 has not been analyzed extensively yet in the context of censorship, we asked ourselves the following questions:
+<!-- Todo: change to answers instead of questions? then we can also add the tool as contribution-->
+In the context of censorship, HTTP/2 has not been analyzed extensively.
+In this blogpost, we analyze HTTP/2's viability as a censorship circumvention technique by answering the following questions.
 1. Is HTTP/2 censored in countries that employ HTTP/1.1 censorship?
-2. How widely is plain HTTP/1.1 supported?
-3. How widely is HTTP/2 supported with prior knowledge and the Upgrade mechanism?
+2. How many servers support unencrypted HTTP/2 with either prior knowledge or the upgrade mechanism?
+3. How many servers support unencrypted HTTP/1.1 in comparison with unencrypted HTTP/2?
 
-In the following, we give an updated look on HTTP censorship in China and Iran.
+Besides showing the viability of unencrypted HTTP/2 as a censorship circumvention technique, we provide [`Does-It-Support-Unencrypted-Http`](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http), a tool that analyzes a server for unencrypted HTTP support across multiple versions.
 
-## Contributions
+<!-- TODO: I would remove this sentence: In the following, we give an updated look on HTTP censorship in China and Iran.-->
 
-In the following, we first present the results of our HTTP censorship analysis for both countries.
-Then, we detail the findings of our HTTP version server support scan.
+## Results
+
+In the following, we show that unencrypted HTTP/2 is not censored in China and Iran.
+Then, we outline existing server support for unencrypted HTTP/2.
 
 ### Censorship
 In China, HTTP/1.1 is censored with a combination of different TCP RST packets with the ACK flag set or not, depending on the specific domain.
 In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
-However, our key observation in our censorship scans is that HTTP/2 is not censored at all in both countries.
+HTTP/1.1 censorship in China and Iran can be triggered with a simple curl command (`curl http://nsfwyoutube.com`).
 
-As a censorship circumvention example, we tried to access http://nsfwyoutube.com in both countries. 
-This website is censored in both countries via HTTP/1.1.
-We were able to access this website in both countries successfully by using HTTP/2 with prior knowledge.
+While HTTP/1.1 is censored in China in Iran, we detected that HTTP/2 with prior knowledge is not censored at all in both countries.
+For any domain censored over HTTP/1.1, the equivalent HTTP/2 requests were not censored in our evaluations.
+For instance, `curl --http2-prior-knowledge http://nsfwyoutube.com` accesses a website censored over HTTP/1.1 in both countries.
+In China and Iran, any server that supports unencrypted HTTP/2 can be accessed without interference from existing HTTP censorship. 
+<!-- TODO: test example in iran -->
 
 ### Server Support
-For the HTTP version server support scan, we used three lists of domains: [Tranco top one million](https://tranco-list.eu/list/KJWPW), the CitizenLab [test list for China](https://github.com/citizenlab/test-lists/commit/80087aa), and the CitizenLab [test list for Iran](https://github.com/citizenlab/test-lists/commit/e9e3bfb).
-The following table shows the number of analyzed domains for each scan in each list:
+To determine servers' support for unencrypted HTTP, we tested domains from three lists:
+We selected domains from [Tranco top one million](https://tranco-list.eu/list/KJWPW), the CitizenLab [test list for China](https://github.com/citizenlab/test-lists/commit/80087aa), and the CitizenLab [test list for Iran](https://github.com/citizenlab/test-lists/commit/e9e3bfb).
+The Tranco top one million list contains domains popular worldwide; the Citizenlab lists contain domains censored in the respective country.
+The following table shows how many domains from each list were reachable and could be evaluated for their HTTP/1.1 and HTTP/2 support:
 
+<!-- TODO: add HTTP/2 line-->
 <table style="margin: 0 auto; text-align:center">
 <thead>
 <tr class="header">
@@ -178,8 +193,9 @@ The following table shows the number of analyzed domains for each scan in each l
 </table><br>
 
 Notably, the number of domains for each scan changes slightly because of temporarily unavailable websites.
-During all scans, we analyzed and followed all received redirects.
-The overall results can be seen in the following table:
+To each website that was reachable we sent a GET request on the path `/` with either HTTP/1.1, HTTP/2 prior knowledge or the HTTP/2 upgrade mechanism.
+We followed all redirects to other HTTP websites and considered a server to support the used HTTP version if it reponded with an `200 OK` using the desired HTTP version.
+The following table shows the number of domains that support HTTP/1.1, HTTP/2 prior knowledge, and the HTTP/2 upgrade mechanism.
 
 <table style="margin: 0 auto; text-align:center">
 <thead>
@@ -212,6 +228,8 @@ The overall results can be seen in the following table:
 </tbody>
 </table><br>
 
+Below, we detail our test vectors and servers' support for each HTTP version we evalauted.
+
 #### Unencrypted HTTP/1.1 Support
 During the unencrypted HTTP/1.1 support scan, we sent the following test vector for all domains:
 ```
@@ -233,7 +251,8 @@ User-Agent: Mozilla/5.0 (...) Gecko/20100101 Firefox/127.0
 ```
 
 The HTTP/2 with prior knowledge support varies between 2.5% and 6.28%, depending on the domain list. 
-This shows that while the support of HTTP/2 is lower than the one of HTTP/1.1 for all lists, it is still being used by some websites.
+Importantly, censored domains from the CitizenLab lists show higher support for HTTP/2 prio knowledge than popular domains from the Tranco top one million list.
+This shows that while servers' support for HTTP/2 prior knowledge is lower than for HTTP/1.1 across all lists, a considerable amount of censored domains supports unencrypted HTTP/2.
 
 #### Unencrypted HTTP/2 with Upgrade Mechanism Support
 During the unencrypted HTTP/2 with upgrade mechanism scan, we sent the following HTTP/1.1 request as a test vector for all domains:
@@ -247,20 +266,24 @@ HTTP2-Settings: AAEAABAAAAIAAAABAAQAAP__AAUAAEAAAAgAAAA...
 ```
 
 The upgrade mechanism has the lowest support ranging from 0.6% to 1.74%, depending on the used domain list. 
-This makes sense as RFC 9113&nbsp;<d-cite key="RFC9113"/> deprecated this method due to its low adoption rate.
+This is unsurprising as RFC 9113&nbsp;<d-cite key="RFC9113"/> deprecated this method due to its low adoption rate.
 
 #### Tranco Relation
+
+Across all scanned HTTP versions, support for unencrypted HTTP varied widely across the Tranco top one million list.
+Below, we depict servers's support for the different HTTP versions across the Tranco top 1 million list.
+
 <img src="/assets/img/2024/http2/tranco.svg" alt="Unencrypted HTTP support by servers from the Tranco Top 1 Million list.">
 <div class="caption">
 Unencrypted HTTP support by servers from the Tranco Top 1 Million list. Unencrypted HTTP/2 support increases for less accessed websites, contrasting unencrypted HTTP/1.
 </div>
 
-Unencrypted HTTP/1.1 support mostly between 10 and 35%.
-Unencrypted HTTP/2 support up to 5% for lower Tranco ranks. 
+<!-- Unencrypted HTTP/1.1 support mostly between 10 and 35%.-->
+<!--Unencrypted HTTP/2 support up to 5% for lower Tranco ranks. -->
 Interestingly, unencrypted HTTP/2 support increases for lower Tranco ranks while unencrypted HTTP/1 support increases until about 400,000 and then decreases again. 
 This aligns with support by websites from Citizenlab list which are usually smaller than Tranco websites.
 While overall support for HTTP/2 is low, we argue that it can still be used to access certain blocked websites successfully and adds to the arsenal of censorship circumvention techniques.
-We discuss this further in ref discussion.
+<!-- We discuss this further in ref discussion.-->
 
 #### Tool for Detecting HTTP Support
 During our analyses, we developed a tool that evaluates a website's support for unencrypted HTTP support.
@@ -278,13 +301,13 @@ HTTP/2 (Upgrade): FAILURE
 ```
 
 This indicates that `lgbtchinatour.com` supports unencrypted HTTP/1.0 after a redirect and unencrypted HTTP/1.1 but no unencrypted HTTP/2.
-We refer to the [GitHub project](https://github.com/UPB-SysSec/Raw-HTTP-Support-Analyzer) for a detailed overview of the tool's functionality.
+We refer to the [GitHub project](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http) for a detailed overview of the tool's functionality.
 We hope that our tool aids the community and fellow researchers in their evaluation of HTTP censorship and its circumvention.
 
 ## Discussion
 
-We have successfully circumvented the HTTP censors in China and Iran and showed that up to 5% of censored websites are accessible via unencrypted HTTP/2.
-This still leaves 95% of censored websites inaccessible with unencrypted HTTP/2 as a circumvention method.
+We have successfully circumvented the HTTP censors in China and Iran and showed that up to 6.28% of censored websites are accessible via unencrypted HTTP/2.
+This still leaves over 93% of censored websites inaccessible with unencrypted HTTP/2 as a circumvention method.
 Despite this, we consider unencrypted HTTP/2 a valuable addition to current censorship circumvention techniques in the cat-and-mouse game between censors and affected people.
 Below, we discuss the limitations and potential of unencrypted HTTP/2 as a circumvention technique.
 
@@ -303,13 +326,13 @@ For previous HTTP versions, censors could analyze the first message sent by the 
 In HTTP/2 the first message must not necessarily contain the connection destination forcing the censor to hold additional state and parse additional messages.
 HTTP/2 also utilizes a new form of header compression which censors would have to accommodate.
 We suspect that the complexity added in HTTP/2 contributed to the censors' decision not to analyze it.
-We also emphasize that censors could still implement HTTP/2 censorship despite its complexity.
+We emphasize that censors could still implement HTTP/2 censorship despite its complexity.
 
 
 ### Circumventing Censors with unencrypted HTTP/2
 Practically applying unencrypted HTTP/2 as a censorship circumvention technique is possible but comes with challenges.
 In this blog post, we accessed otherwise blocked resources with unencrypted HTTP/2 using curl.
-Curl's built-in support for unencrypted HTTP/2 can be used to access specific HTML sites but its usability is limited in comparison to a full-blown web browser.
+Curl's built-in support for unencrypted HTTP/2 can be used to access specific HTML sites but its usability is limited in comparison to a full-fletched web browser.
 Unfortunately, we are not aware of any web browser that supports unencrypted HTTP/2.
 To utilize unencrypted HTTP/2 as a censorship circumvention technique from a browser, we propose an HTTP update proxy that translates unencrypted HTTP/1.1 spoken by the browser into unencrypted HTTP/2 and vice-versa.
 A similar proxy could be installed on the other side of the firewall, downgrading unencrypted HTTP/2 to unencrypted HTTP/1.1, allowing unencrypted HTTP/2 traffic to pass the censor and connect to a server that only supports unencrypted HTTP/1.1.
@@ -318,6 +341,6 @@ Overall, we consider the practical deployment of HTTP/2 as a censorship circumve
 ## Conclusion
 In summary, we introduced unencrypted HTTP/2 as a censorship circumvention method by accessing blocked resources in China and Iran.
 While server support for unencrypted HTTP/2 is low, we showed that a non-negligible number of censored websites supports it.
-To aid future evaluations of servers' support for unencrypted HTTP/2, we developed a tool and made it accessible on  [GitHub](https://github.com/UPB-SysSec/Raw-HTTP-Support-Analyzer).
+To aid future evaluations of servers' support for unencrypted HTTP/2, we developed a tool and made it accessible on [GitHub](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http).
 Feel free to use it or contact us for further discussion and future work.
 We hope that our contributions aid affected people and the censorship circumvention community.
