resolved editorial todos

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -99,9 +99,8 @@ As the initial step, the client establishes a TCP connection with the server.
 Then, the client sends the so-called connection preface, followed by a **SETTINGS** frame.
 This connection preface was specifically defined to trigger errors on HTTP servers without HTTP/2 support.
 The **SETTINGS** frame contains additional configuration parameters for the connection.
-If the server supports HTTP/2, it can process the preface and respond with its own connection preface, containing a **SETTINGS** frame.
-<!-- TODO: is this correct?-->
-After receiving the servers' **SETTINGS** frame, the client sends its HTTP/2 request.
+After sending the connection preface and **SETTINGS** frame, the client sends its HTTP/2 request.
+If the server supports HTTP/2, it responds with its own connection preface, containing a **SETTINGS** frame and answers the client's HTTP/2 request with an HTTP/2 response.
 
 #### Upgrade Mechanism
 <!-- Upgrade -->
@@ -129,14 +128,12 @@ It is also less fit for censorship circumvention than prior knowledge as it invo
 <!-- HTTP/2 in general only used encrypted but WHAT IF? -->
 <!-- Todo: change to answers instead of questions? then we can also add the tool as contribution-->
 In the context of censorship, HTTP/2 has not been analyzed extensively.
-In this blogpost, we analyze HTTP/2's viability as a censorship circumvention technique by answering the following questions.
-1. Is HTTP/2 censored in countries that employ HTTP/1.1 censorship?
-2. How many servers support unencrypted HTTP/2 with either prior knowledge or the upgrade mechanism?
-3. How many servers support unencrypted HTTP/1.1 in comparison with unencrypted HTTP/2?
+In this blogpost, we analyze HTTP/2's viability as a censorship circumvention technique and show the following.
+1. HTTP/2 is uncensored in China and Iran, two countries that widely employ HTTP/1.1 censorship.
+2. Up to 6.28% of server support unencrypted HTTP/2, with smaller servers and censored domains showing higher support than large websites. 
+3. Unencrypted HTTP/1.1 is still supported by around 20% of servers.
+4. To easily analyze a server for its unencrypted HTTP support, we provide the tool [`Does-It-Support-Unencrypted-Http`](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http).
 
-Besides showing the viability of unencrypted HTTP/2 as a censorship circumvention technique, we provide [`Does-It-Support-Unencrypted-Http`](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http), a tool that analyzes a server for unencrypted HTTP support across multiple versions.
-
-<!-- TODO: I would remove this sentence: In the following, we give an updated look on HTTP censorship in China and Iran.-->
 
 ## Results
 
@@ -160,14 +157,13 @@ We selected domains from [Tranco top one million](https://tranco-list.eu/list/KJ
 The Tranco top one million list contains domains popular worldwide; the Citizenlab lists contain domains censored in the respective country.
 The following table shows how many domains from each list were reachable and could be evaluated for their HTTP/1.1 and HTTP/2 support:
 
-<!-- TODO: add HTTP/2 line-->
 <table style="margin: 0 auto; text-align:center">
 <thead>
 <tr class="header">
 <th style="text-align: left;"><span>List</span></th>
 <th style="text-align: left;"><span>HTTP/1.1</span></th>
-<th style="text-align: left;"><span>Prior Knowledge</span></th>
-<th style="text-align: left;"><span>Upgrade Mechanism</span></th>
+<th style="text-align: right;"><span>HTTP/2 Prior Knowledge</span></th>
+<th style="text-align: right;"><span>HTTP/2 Upgrade Mechanism</span></th>
 </tr>
 </thead>
 <tbody>
@@ -202,8 +198,8 @@ The following table shows the number of domains that support HTTP/1.1, HTTP/2 pr
 <tr class="header">
 <th style="text-align: left;"><span>List</span></th>
 <th style="text-align: left;"><span>HTTP/1.1</span></th>
-<th style="text-align: left;"><span>Prior Knowledge</span></th>
-<th style="text-align: left;"><span>Upgrade Mechanism</span></th>
+<th style="text-align: right;"><span>HTTP/2 Prior Knowledge</span></th>
+<th style="text-align: right;"><span>HTTP/2 Upgrade Mechanism</span></th>
 </tr>
 </thead>
 <tbody>
