changed curl command to work in China and Iran

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -142,13 +142,12 @@ Then, we outline existing server support for unencrypted HTTP/2.
 ### Censorship
 In China, HTTP/1.1 is censored with a combination of different TCP RST packets with the ACK flag set or not, depending on the specific domain.
 In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
-HTTP/1.1 censorship in China and Iran can be triggered with a simple curl command (`curl http://nsfwyoutube.com`).
+HTTP/1.1 censorship in China and Iran can be triggered with a simple curl command (`curl http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162`).
 
 While HTTP/1.1 is censored in China in Iran, we detected that HTTP/2 with prior knowledge is not censored at all in both countries.
 For any domain censored over HTTP/1.1, the equivalent HTTP/2 requests were not censored in our evaluations.
-For instance, `curl --http2-prior-knowledge http://nsfwyoutube.com` accesses a website censored over HTTP/1.1 in both countries.
+For instance, `curl --http2-prior-knowledge http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162` accesses a website censored over HTTP/1.1 in both countries.
 In China and Iran, any server that supports unencrypted HTTP/2 can be accessed without interference from existing HTTP censorship. 
-<!-- TODO: test example in iran -->
 
 ### Server Support
 To determine servers' support for unencrypted HTTP, we tested domains from three lists:
